--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,69 @@
 body {
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+}
+
+.data {
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    width: 80%;
+    height: 100px;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+thead {
+    text-align: left;
+    background-color: rgb(148, 244, 244);
+    appearance: none;
+    margin: 0px;
+    border-spacing: 0px;
+}
+th {
+    border-right: 2px solid black;
+    text-align: center;
+}
+
+td {
+    border-right: 2px solid black;
+    text-align: center;
+    width: 10 0px;
+}
+
+dialog {
+    height: 100px;
+    width: 500px;
+}
+
+form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#loader {
+    display: none;
+    border: 10px solid hsl(0, 25%, 84%);
+    border-top: 10px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
